# group093-mkummeler-clefebvre

./: CMakeLists.txt  README.md  README.txt  executable_main  projets.c  x_info_pour_nous.md  z_info_pour_nous  z_info_pour_nous.txt
.cmake/api/v1/reply/: cmakeFiles-v1-b2f926bb2f921861aef8.json  index-2024-04-06T11-58-38-0929.json
data/: mesh.txt  problem.txt
src/: code.c  code.h  main.c  struct.h  tests.c
src/tests/: tests.c  tests.h
